@@ -1,4 +1,5 @@
 CVS HEAD:
+ * Added theme dialog.  started with ":theme"	
  * Added UNIT, UNDEAD_UNIT, and PLACE_IMAGE macros to utils.cfg
  * terrain improvements
   * fixed swamp transition (NW, SE) graphics
